# kul-spchlab-ss24

./: .gitignore  pyproject.toml
html/lab01/: AuditoryDemonstrations.html  HarmonicSignals.html
html/lab02/: MelScale.html  MelSpectrogram.html  Spectrogram.html
html/lab03/: FormantDistribution.html  PetersonBarney.html  PitchDistribution.html
html/lab04/: CepstralLiftering.html  FeatureExtraction.html  TimeDomainFeatures.html
html/lab05/: Bayes.html  StandardNormalDistribution.html
html/lab07/: DynamicTimeWarping.html
lab00_introduction/: Segmentations.ipynb
lab01_speech_audio/: AuditoryDemonstrations.ipynb  HarmonicSignals.ipynb  Keyboard.ipynb
lab02_spectrogram/: FilteredSignals.ipynb  MelScale.ipynb  Spectrogram.ipynb  SpectrogramGUI.ipynb
lab03_source_filter/: FormantDistribution.ipynb  SpectrogramAnalysis.ipynb
lab04_feature_extraction/: CepstralLiftering.ipynb  TimeDomainFeatures.ipynb
