[project]
name = "kul-spchlab-ss24"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marco Bischoff", email = "bischoff_m@aim.com"},
]
dependencies = [
    "pyspch @ git+https://github.com/compi1234/pyspch.git",
    "ipython>=8.25.0",
    "ipywidgets>=8.1.3",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "scipy>=1.13.1",
    "librosa>=0.10.2.post1",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "setuptools>=70.0.0",
    "sounddevice>=0.4.7",
    "notebook>=7.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
